--- a/gjtjb/RKWXT/Common/CustomMade/CustomMade.plist
+++ b/gjtjb/RKWXT/Common/CustomMade/CustomMade.plist
@@ -7,7 +7,7 @@
 	<key>D_KEY_APP_CATEGORY</key>
 	<integer>1</integer>
 	<key>D_KEY_APP_MERCHANTNAME</key>
-	<string>我信云</string>
+	<string>我信</string>
 	<key>D_KEY_APP_SUBSHOPID</key>
 	<integer>100000</integer>
 	<key>D_KEY_FIND_NAME</key>
