--- a/gjtjb/RKWXT/Info.plist
+++ b/gjtjb/RKWXT/Info.plist
@@ -25,7 +25,7 @@
 			<string>alipay</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>AliMobilePay100000</string>
+				<string>AliMobilePayWx10</string>
 			</array>
 		</dict>
 		<dict>
